--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@stackblitz/sdk": "^1.9.0",
     "@types/xml2js": "^0.4.14",
     "@webcontainer/api": "^1.5.1",
     "axios": "^1.7.8",
